--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "test",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-dashboard": "2.9.6",
+        "node-red-contrib-modbus": "3.6.1",
+        "node-red-contrib-moment": "2.0.7"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flow.json",
