--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "description": "A Node-RED Project",
     "version": "0.0.1",
     "dependencies": {
-        "node-red-dashboard": "2.17.1",
         "node-red-contrib-modbus": "4.1.3",
-        "node-red-contrib-moment": "3.0.3"
+        "node-red-contrib-moment": "~4.0.0",
+        "node-red-dashboard": "~2.28.2",
+        "node-red-node-rbe": "~0.5.0",
+        "node-red-node-tail": "~0.3.0"
     },
     "node-red": {
         "settings": {
